# blinky_time

./: .clinerules  .cppcheck-suppressions  .gitignore  .gitmodules  .mcp.json  ARDUINOJSON_REQUIRED.md  AUDIT_SUMMARY.md  BUILD_SUCCESS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  IMPLEMENTATION_REVIEW.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MUSIC_MODE_SIMPLIFIED.md  Makefile  OPTIMAL_FIRE_SETTINGS.md  PR43_FEEDBACK_RESOLUTION.md  README.md  RUNTIME_DEVICE_CONFIG_STATUS.md  SAFETY.md  SECURITY.md  TESTING.md  TESTING_BUGS.md  TESTING_FIXES.md  UNIFIED_LAYOUT_COMPLETION.md  audio_tuner.py  validate_syntax.py  wifi.md
.claude/: settings.local.json
.github/: BRANCHING_STRATEGY.md  BRANCH_PROTECTION.md
Gen-lamp/: Button.h  Gen-lamp.ino  Knob.h
arduinotemp/: build.options.json
asheem-beacon/: asheem-beacon.ino
basicString/: AlternatingMode.h  ChristmasLightsMode.h  RunnerMode.h  StarsMode.h  Utils.h  basicString.ino
blinky-console/: .firebaserc  .gitignore  eslint.config.js  firebase.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
blinky-serial-mcp/: TOOLING-ASSESSMENT.md  package-lock.json  package.json
blinky-server/: Makefile  pyproject.toml  run-server.sh  run.sh
blinky-server/blinky_server/: __main__.py  paths.py  scene_cursor.py  scenes.py  systemd_notify.py
blinky-server/blinky_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
blinky-server/blinky_server/api/: app.py  deps.py  models.py  routes_commands.py  routes_devices.py  routes_firmware.py  routes_flash_jobs.py  routes_ota.py  routes_scenes.py  routes_testing.py  ws.py
blinky-server/blinky_server/ble/: advertiser.py  protocol.py
blinky-server/blinky_server/device/: __init__.py  device.py  manager.py  protocol.py
blinky-server/blinky_server/firmware/: __init__.py  _guard.py  anomalies.py  ble_dfu.py  compile.py  flash_job.py  uf2_upload.py  utils.py  verify.py
blinky-server/blinky_server/ota/: __init__.py  ble_dfu.py  compile.py  qspi_ota.py  uf2_upload.py
blinky-server/blinky_server/testing/: __init__.py  audio_lock.py  audio_player.py  job_manager.py  nn_capture.py  onset_label_merge.py  scoring.py  test_runner.py  test_session.py  track_discovery.py  types.py
blinky-server/blinky_server/transport/: __init__.py  base.py  ble_transport.py  discovery.py  serial_lock.py  serial_transport.py  wifi_transport.py
blinky-server/tests/: conftest.py  mock_transport.py  test_anomalies.py  test_api.py  test_device.py  test_discovery.py  test_flash_job.py  test_flash_job_manager.py  test_fleet_ble.py  test_fleet_manager.py  test_models.py  test_protocol.py  test_registry_jsons.py  test_routes_devices_flash.py  test_routes_flash_jobs.py  test_scenes.py  test_scoring.py  test_session.py  test_spa_mount.py  test_track_discovery.py  test_verify.py
blinky-simulator/: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_vs.cmd  package-lock.json  package.json  tsconfig.json
blinky-simulator/include/: Arduino.h  ArduinoCompat.h  AudioPatternLoader.h  GifEncoder.h  LEDImageRenderer.h  MetricsCalculator.h  ParamParser.h  SimulatorSystemTime.h
blinky-simulator/src/: main.cpp
blinky-simulator/ts-src/: audioPatterns.ts  cli.ts  gifEncoder.ts  gifenc.d.ts  index.ts  noise.ts  renderer.ts  types.ts
blinky-simulator/ts-src/effects/: HueRotation.ts  index.ts
blinky-simulator/ts-src/generators/: Fire.ts  Lightning.ts  Water.ts  generators.test.ts  index.ts
blinky-test-player/: NEXT_TESTS.md  PARAMETER_TUNING_HISTORY.md  PARAM_TUNER_GUIDE.md  TUNING-PLAN.md  TUNING_SCENARIOS.md  analyze-fast-tune.cjs  copy_samples.ps1  package-lock.json  package.json  sample-manifest.json  view-results.cjs
blinky-things/: BUILD_GUIDE.md  BatteryMonitor.h  BlinkyArchitecture.h  BlinkyImplementations.h  ConfigStorage.cpp  ConfigStorage.h  Constants.h  EffectMatrix.h  EffectTestRunner.cpp  EffectTestRunner.h  FINAL_SUMMARY.md  FireEffect.cpp  FireEffect.h  FireEffectTest.cpp  FireEffectTest.h  FireGenerator.cpp  FireGenerator.h  FireGeneratorTest.h  FireVisualEffect.cpp  FireVisualEffect.h  GeneratorTestRunner.h  HueRotationEffect.h  IMPROVEMENTS_COMPLETED.md  IMPROVEMENT_PLAN.md  Nrf52PdmMic.cpp  README.md  STATUS.md  SerialConsole.cpp  SerialConsole.h  VisualEffect.h  blinky-things.ino  library.properties
bootloader/: README.md  update-bootloader-ota-default.uf2  update-bootloader-qspi-ota-default.uf2  update-bootloader-qspi-ota.uf2
bucketLEDs/: bucketLEDs.ino  microphone.h
docs/: ARDUINO_VERSIONING.md  AUDIO-TUNING-GUIDE.md  AUDIO_ARCHITECTURE.md  AUDIO_IMPROVEMENTS_PLAN.md  AUDIO_IMPROVEMENT_ANALYSIS.md  AUDIO_SYSTEM_AUDIT_2026_04_24.md  AUDIO_TRACKER_PLAN.md  BLE_FLEET_RELIABILITY_PLAN.md  BLUETOOTH_IMPLEMENTATION_PLAN.md  BOOTLOADER_PRODUCTION_AUDIT_2026_05_15.md  BUILD_GUIDE.md  BUILD_SYSTEM.md  CODE_AUDIT_COMPLETE.md  COMB_FILTER_IMPROVEMENT_PLAN.md  COMMON_SCENARIO_TEST_PLAN.md  DEVELOPMENT.md  ENSEMBLE_CALIBRATION_ASSESSMENT.md  FLASH_LOCKDOWN_AUDIT.md  FLASH_LOCKDOWN_PLAN.md  FLEET_CONSOLE_REFACTOR_PLAN.md  FREQUENCY_DETECTION.md  GENERATOR_EFFECT_ARCHITECTURE.md  GIT_CLI_REFERENCE.md  GLOSSARY.md  HARDWARE.md  HYBRID_FEATURE_ANALYSIS_PLAN.md  IMPROVEMENT_PLAN.md  LED_RENDER_OPTIMIZATION_PLAN.md  ML_IMPROVEMENT_PLAN.md  ML_STORAGE_LAYOUT.md  ML_TRAINING_PLAN.md  MULTI_HYPOTHESIS_OPEN_QUESTIONS_ANSWERED.md  OPEN_ISSUES_2026_05_19.md  (+33 more)
tests/parity/: CMakeLists.txt  README.md  parity_harness.cpp
(+1675 files in other folders)
